--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,7 +9,7 @@
                                 <i class="fa fa-car"></i> DRIVIFY
                             </h3>
                             <span class="block text-muted m-t-xs">
-                                <strong class="font-bold"><%= "#{@current_user.nombre} #{@current_user.ap_paterno}"%></strong>
+                                <strong class="font-bold"><%= "#{current_user.nombre} #{current_user.ap_paterno}"%></strong>
                             </span>
                         </span>
                     </a>
@@ -29,7 +29,7 @@
             </li>
 
             <%# Modulos de administradores %>
-            <% if @current_user.role.id == 1 %>
+            <% if current_user.role.id == 1 %>
               <li class="<%= 'active' if params[:admin_users_scope].eql? true %>">
                 <%= link_to user_admin_path do %>
                   <i class="fa fa-users"></i> <span class="nav-label">Usuarios</span>
@@ -56,7 +56,7 @@
             <% end %>
 
             <%# Modulos de evaluadores %>
-            <% if @current_user.role.id == 2 %>
+            <% if current_user.role.id == 2 %>
               <li class="<%= 'active' if params[:evaluaciones_teoricas_scope].eql? true %>">
                 <%= link_to quiz_eval_path do %>
                   <i class="fa fa-list-ol"></i> <span class="nav-label">Evaluaciones Teóricas</span>
@@ -65,10 +65,15 @@
             <% end %>
 
             <%# Modulos de usuarios %>
-            <% if @current_user.role.id == 3 %>
+            <% if current_user.role.id == 3 %>
               <li class="<%= 'active' if params[:evaluaciones_teoricas_scope].eql? true %>">
                 <%= link_to quiz_user_path do %>
                   <i class="fa fa-list-ol"></i> <span class="nav-label">Evaluaciones Teóricas</span>
+                <% end %>
+              </li>
+              <li class="<%= 'active' if params[:simulaciones_scope].eql? true %>">
+                <%= link_to simulation_user_path do %>
+                  <i class="fa fa-car"></i> <span class="nav-label">Evaluaciones Prácticas</span>
                 <% end %>
               </li>
             <% end %>
