--- a/app/views/registro/new.html.erb
+++ b/app/views/registro/new.html.erb
@@ -53,7 +53,7 @@
               <label><span class="text-danger">*</span>Fecha de Nacimiento</label>
               <div class="input-group date">
                 <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                <%= f.date_field :fecha_nacimiento, class:"form-control", required:"true" %>
+                <%= f.date_field :fecha_nacimiento, class:"form-control", required:"true", max:"#{DateTime.now}" %>
               </div>
             </div>
             <div class="form-group">
