--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -61,7 +61,7 @@
   <script>
 
       $(function(){
-          $.backstretch("<%= asset_path "car-background.jpg" %>");
+          $.backstretch(' ');
       });
 
   </script>
