--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= csrf_meta_tags %>
     <%= yield :css %>
 </head>
-<body>    
+<body class="md-skin">
 
     <!-- Wrapper-->
     <div id="wrapper">
