--- a/app/views/registro/new.html.erb
+++ b/app/views/registro/new.html.erb
@@ -92,7 +92,7 @@
     $(function(){
 
         // $.backstretch("https://images.pexels.com/photos/13861/IMG_3496bfree.jpg");
-        $.backstretch("<%= asset_path "car-background.jpg" %>");
+        $.backstretch(' ');
 
         $('#user_curp').on('keyup',function(){
             $(this).val($(this).val().toUpperCase());
