--- a/app/assets/stylesheets/base/custom.scss
+++ b/app/assets/stylesheets/base/custom.scss
@@ -30,20 +30,17 @@ body{
 }
 
 .pretty{
-  display: block;    
+  display: block;
   margin: 1em 0;
 }
 
 .select2-container--default .select2-selection--single[aria-expanded="true"],.select2-dropdown{
   border-color: $navy;
+  border-radius: 0px;
 }
 
 .md-skin .navbar-fixed-top, .md-skin .navbar-static-top {
   background-color: $navy !important;
-}
-
-.backstretch{
-  background-image: linear-gradient(to top left, #673AB7, #69F0AE);
 }
 
 .table-hover > tbody > tr:hover {
@@ -55,4 +52,36 @@ body{
   background-image: image_url('car-background.jpg');
   opacity: 0.25;
   background-size: 100%;
+}
+
+.md-skin .nav-header{
+  background: $navy;
+}
+
+.select2-container--default .select2-selection--single{
+  border-radius: 0px;
+}
+
+.select2-container .select2-selection--single {
+  line-height: inherit;
+}
+
+.widget-head-color-box{
+  background-image: image_url('patterns/bg-pattern.png');
+}
+
+* {
+  border-radius: 0px !important;
+}
+
+.unordered-list{
+  padding: 0 40px !important;
+}
+
+.hr-line-dashed-dark {
+  border-top: 1px dashed $navy;
+  color: #ffffff;
+  background-color: #ffffff;
+  height: 1px;
+  margin: 20px 0;
 }
