--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -1,9 +1,9 @@
 // Basic Colors
-$navy: #673AB7;       // Primary color
-$navy_pale: #EDE7F6;   // Navy pale
+$navy: #263238;       // Primary color
+$navy_pale: #ECEFF1;   // Navy pale
 $dark-gray: #c2c2c2;  // Default color
-$blue: #1c84c6;       // Success color
-$lazur: #23c6c8;      // Info color
+$blue: #4CAF50;       // Success color
+$lazur: #00BCD4;      // Info color
 $yellow: #f8ac59;     // Warning color
 $red: #ED5565;        // Danger color
 
