--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
             <div class="col-md-12">
               <div class="alert alert-warning">
                 El contenido presente es una adaptación del Reglamento de Tránsito de la Ciudad de México, emitido el 17 de agosto de 2015.
-                <a target="_blank" class="alert-link" href="http://data.ssp.cdmx.gob.mx/reglamentodetransito/documentos/nuevo_reglamento_transito.pdf"><i class="fa fa-external-link"></i> Descargar reglamento en PDF</a>
+                <a target="_blank" class="alert-link" href="http://data.ssp.cdmx.gob.mx/reglamentodetransito/documentos/nuevo_reglamento_transito.pdf">Descargar reglamento en PDF <i class="fa fa-external-link"></i> </a>
               </div>
             </div>
           </div>
